Data Structure and Algorithm/exercise/compiling_error.txt
/Users/javascript/Documents/GitHub/compro-1/Data Structure and Algorithm/exercise/ex3.c:40:16: error: array initializer must be an initializer list
  struct Node* temp[5] = head;
               ^
1 error generated.
